--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/Hrms
+spring.datasource.url=jdbc:postgresql://localhost:5432/hrms
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.properties.javax.persistence.validation.mode = none
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=c
-spring.mail.password=> 6kL4L8UQX2rj3Cj <
+spring.mail.username=hrmstestemailaddress@gmail.com
+spring.mail.password=6kL4L8UQX2rj3Cj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 server.port=8081
